# fastapi-template

./: LICENSE  Makefile  docker-compose-dev.yml  docker-compose-tests.yml  pyproject.toml
dockerfiles/app/: Dockerfile
migrations/: env.py
migrations/versions/: 242c7c195079_initial.py  95a6ca0a5e3c_initial.py
src/: config.py  main.py
src/auth/: manager.py  models.py  schemas.py
src/db/: mixins.py  models.py  session.py
src/example/: models.py  routes.py  schemas.py
src/example/tests/: test_example.py
src/user/: auth.py  manager.py  models.py  schemas.py
