[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["zoxon470 <zoxon470@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_template"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.11.0"
asyncpg = "0.27.0"
email-validator = "2.0.0.post2"
fastapi = "0.95.1"
fastapi-users = "11.0.0"
fastapi-users-db-sqlalchemy = "5.0.0"
sqlalchemy = "2.0.13"
uvicorn = "0.22.0"
pydantic = "1.10.7"
python-dotenv = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
